fix : change border-radius of screenshots in project page on mobile screens

--- a/app/[locale]/styles/partials/_projects.scss
+++ b/app/[locale]/styles/partials/_projects.scss
@@ -303,6 +303,7 @@
       img {
         max-height: 90vh;
         border: 1px solid var(--color--light-blue-3);
+        border-radius: var(--padding--sm);
       }
     }
 
